--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -16,6 +16,8 @@ dependencies:
     - field.field.node.news.field_meta_tags
     - field.field.node.news.field_news_image
     - field.field.node.news.field_news_inspiration
+    - field.field.node.news.field_section_bg_graphics
+    - field.field.node.news.field_section_bg_graphics_pos
     - node.type.news
   module:
     - content_hierarchy
@@ -35,7 +37,7 @@ third_party_settings:
       label: 'Page header'
       region: hidden
       parent_name: ''
-      weight: 18
+      weight: 20
       format_type: fieldset
       format_settings:
         classes: ''
@@ -50,7 +52,7 @@ third_party_settings:
       label: Sideindstillinger
       region: content
       parent_name: ''
-      weight: 2
+      weight: 1
       format_type: details_sidebar
       format_settings:
         classes: ''
@@ -67,7 +69,7 @@ third_party_settings:
       label: Sidebar
       region: content
       parent_name: ''
-      weight: 15
+      weight: 14
       format_type: tabs
       format_settings:
         classes: ''
@@ -131,7 +133,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 5
+    weight: 4
     region: content
     settings:
       rows: 9
@@ -141,13 +143,13 @@ content:
     third_party_settings: {  }
   content_hierarchy:
     type: content_hierarchy_modal
-    weight: 16
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -173,7 +175,7 @@ content:
     third_party_settings: {  }
   field_graphics:
     type: media_library_widget
-    weight: 3
+    weight: 2
     region: content
     settings:
       media_types: {  }
@@ -200,7 +202,7 @@ content:
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 13
+    weight: 12
     region: content
     settings:
       sidebar: true
@@ -208,7 +210,7 @@ content:
     third_party_settings: {  }
   field_news_image:
     type: media_library_widget
-    weight: 4
+    weight: 3
     region: content
     settings:
       media_types: {  }
@@ -223,49 +225,54 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  langcode:
-    type: language_select
-    weight: 0
+  field_section_bg_graphics:
+    type: options_select
+    weight: 16
     region: content
-    settings:
-      include_locked: true
+    settings: {  }
+    third_party_settings: {  }
+  field_section_bg_graphics_pos:
+    type: options_select
+    weight: 17
+    region: content
+    settings: {  }
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 14
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 8
+    weight: 7
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 12
+    weight: 11
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 9
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 1
+    weight: 0
     region: content
     settings:
       size: 60
@@ -278,7 +285,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
@@ -287,10 +294,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 11
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   field_header: true
   field_hide_title: true
+  langcode: true
