--- a/config/sync/core.entity_view_display.node.blog_post.default.yml
+++ b/config/sync/core.entity_view_display.node.blog_post.default.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - field.field.node.blog_post.body
     - field.field.node.blog_post.field_list_media
+    - field.field.node.blog_post.field_section_bg_graphics
+    - field.field.node.blog_post.field_section_bg_graphics_pos
     - node.type.blog_post
   module:
     - text
@@ -19,13 +21,15 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 101
+    weight: 1
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 0
     region: content
 hidden:
   field_list_media: true
+  field_section_bg_graphics: true
+  field_section_bg_graphics_pos: true
   langcode: true
