--- a/config/sync/core.entity_view_display.node.blog_post.list.yml
+++ b/config/sync/core.entity_view_display.node.blog_post.list.yml
@@ -6,6 +6,8 @@ dependencies:
     - core.entity_view_mode.node.list
     - field.field.node.blog_post.body
     - field.field.node.blog_post.field_list_media
+    - field.field.node.blog_post.field_section_bg_graphics
+    - field.field.node.blog_post.field_section_bg_graphics_pos
     - node.type.blog_post
   module:
     - layout_builder
@@ -42,4 +44,6 @@ content:
     weight: 0
     region: content
 hidden:
+  field_section_bg_graphics: true
+  field_section_bg_graphics_pos: true
   langcode: true
