--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -16,6 +16,8 @@ dependencies:
     - field.field.node.news.field_meta_tags
     - field.field.node.news.field_news_image
     - field.field.node.news.field_news_inspiration
+    - field.field.node.news.field_section_bg_graphics
+    - field.field.node.news.field_section_bg_graphics_pos
     - node.type.news
   module:
     - datetime
@@ -112,5 +114,7 @@ hidden:
   field_hide_breadcrumb: true
   field_hide_title: true
   field_list_media: true
+  field_section_bg_graphics: true
+  field_section_bg_graphics_pos: true
   langcode: true
   search_api_excerpt: true
