--- a/config/sync/core.entity_view_display.node.news.full.yml
+++ b/config/sync/core.entity_view_display.node.news.full.yml
@@ -17,6 +17,8 @@ dependencies:
     - field.field.node.news.field_meta_tags
     - field.field.node.news.field_news_image
     - field.field.node.news.field_news_inspiration
+    - field.field.node.news.field_section_bg_graphics
+    - field.field.node.news.field_section_bg_graphics_pos
     - node.type.news
   module:
     - layout_builder
@@ -47,6 +49,11 @@ third_party_settings:
       - core
     entity_view_mode_restriction:
       allowed_layouts: {  }
+      restricted_categories:
+        - Block
+        - Bruger
+        - Cookiebot
+        - Devel
       blacklisted_blocks:
         'Custom block types': {  }
         'Inline blocks': {  }
@@ -61,11 +68,6 @@ third_party_settings:
         System: {  }
         Webform: {  }
         core: {  }
-      restricted_categories:
-        - Block
-        - Bruger
-        - Cookiebot
-        - Devel
 _core:
   default_config_hash: 3gEG_f13mhXS_39_cFYNgEywgm3tCe7wzoDSIuoe18U
 id: node.news.full
@@ -91,7 +93,7 @@ content:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: 2_column_flex_height
+      view_mode: full_width_16_9
       link: false
     third_party_settings: {  }
     weight: 0
@@ -108,6 +110,8 @@ hidden:
   field_list_media: true
   field_meta_tags: true
   field_news_inspiration: true
+  field_section_bg_graphics: true
+  field_section_bg_graphics_pos: true
   langcode: true
   layout_builder__layout: true
   links: true
