--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -17,6 +17,8 @@ dependencies:
     - field.field.node.news.field_meta_tags
     - field.field.node.news.field_news_image
     - field.field.node.news.field_news_inspiration
+    - field.field.node.news.field_section_bg_graphics
+    - field.field.node.news.field_section_bg_graphics_pos
     - node.type.news
   module:
     - user
@@ -45,5 +47,7 @@ hidden:
   field_meta_tags: true
   field_news_image: true
   field_news_inspiration: true
+  field_section_bg_graphics: true
+  field_section_bg_graphics_pos: true
   langcode: true
   search_api_excerpt: true
