--- a/config/sync/core.entity_view_display.node.article.slideshow.yml
+++ b/config/sync/core.entity_view_display.node.article.slideshow.yml
@@ -110,6 +110,8 @@ hidden:
   field_location: true
   field_media_downloads: true
   field_season: true
+  field_section_bg_graphics: true
+  field_section_bg_graphics_pos: true
   field_teaching_goals: true
   field_time: true
   langcode: true
