SIS2-170: Multipe QA fixes

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -496,3 +496,9 @@ term-page:
   css:
     theme:
       dist/components/css/components/03-organisms/term-page.css: {}
+
+button-block:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/02-molecules/button-block.css: {}
