--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.styles.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.styles.yml
@@ -7,6 +7,7 @@ button_style:
   styles:
     button--normal: Normal
     button--ghost: Ghost
+    button--green: Green
 
 color_theme:
   label: Color themes
