--- a/config/sync/core.entity_view_display.node.blog_post.slideshow.yml
+++ b/config/sync/core.entity_view_display.node.blog_post.slideshow.yml
@@ -33,7 +33,7 @@ content:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: full_width_16_9
+      view_mode: entity_slideshow
       link: false
     third_party_settings: {  }
     weight: 2
