--- a/config/sync/core.entity_form_display.paragraph.inline_hero.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.inline_hero.default.yml
@@ -25,14 +25,14 @@ mode: default
 content:
   field_background:
     type: media_library_widget
-    weight: 1
+    weight: 3
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_cta:
     type: styles_link_target
-    weight: 4
+    weight: 6
     region: content
     settings:
       placeholder_url: ''
@@ -42,34 +42,46 @@ content:
     third_party_settings: {  }
   field_dynamic_height:
     type: boolean_checkbox
-    weight: 2
+    weight: 4
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_overlay:
     type: boolean_checkbox
-    weight: 3
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_text:
     type: text_textarea
-    weight: 0
+    weight: 1
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-  field_text_position:
-    type: styles
-    weight: 5
+  field_text_color:
+    type: options_select
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_text_position:
+    type: styles
+    weight: 7
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_title:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
 hidden:
   created: true
-  field_text_color: true
-  field_title: true
   status: true
