--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.articles.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.articles.yml
@@ -170,6 +170,12 @@ process:
           migration: articles
           source: target_id
           no_stub: true
+  moderation_state:
+    plugin: static_map
+    source: status
+    map:
+      0: draft
+      1: published
 destination:
   plugin: entity:node
   default_bundle: article
