--- a/config/sync/workbench_email.workbench_email_template.article_submitted.yml
+++ b/config/sync/workbench_email.workbench_email_template.article_submitted.yml
@@ -7,6 +7,7 @@ dependencies:
     - user.role.webmaster
 id: article_submitted
 label: 'Artikel indsendt'
+format: null
 subject: 'Ny artikel: [node:title] '
 recipient_types:
   roles_with_access:
