--- a/config/sync/core.entity_form_display.block_content.entity_slideshow.default.yml
+++ b/config/sync/core.entity_form_display.block_content.entity_slideshow.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - block_content.type.entity_slideshow
+    - field.field.block_content.entity_slideshow.field_entity_bundle
     - field.field.block_content.entity_slideshow.field_entity_slideshow_items
     - field.field.block_content.entity_slideshow.field_entity_slideshow_term
     - field.field.block_content.entity_slideshow.field_slideshow_autoplay
@@ -12,9 +13,15 @@ targetEntityType: block_content
 bundle: entity_slideshow
 mode: default
 content:
+  field_entity_bundle:
+    type: options_select
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_entity_slideshow_items:
     type: entity_reference_autocomplete
-    weight: 26
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
@@ -24,7 +31,7 @@ content:
     third_party_settings: {  }
   field_entity_slideshow_term:
     type: entity_reference_autocomplete
-    weight: 27
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
@@ -34,14 +41,14 @@ content:
     third_party_settings: {  }
   field_slideshow_autoplay:
     type: boolean_checkbox
-    weight: 28
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   info:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -49,7 +56,7 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
