Changed ddev config to use old mariadb_version string instead of new database array

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -8,9 +8,7 @@ router_https_port: "443"
 xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
-database:
-  type: mariadb
-  version: "10.4"
+mariadb_version: "10.4"
 nfs_mount_enabled: false
 mutagen_enabled: true
 webimage_extra_packages: [php8.0-redis]
