SIS2-206: Changed system "mail from" to use same email address used in Ubivox account

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -3,7 +3,7 @@ _core:
 langcode: da
 uuid: caee44fc-f243-4872-ae99-8df777d80632
 name: 'Skoven i skolen'
-mail: noreply@skoven-i-skolen.dk
+mail: npskjold@np-skjoldundernes-land.clients.ubivox.com
 slogan: ''
 page:
   403: ''
