SIS2-207: Added checkbox for GDPR compliancy and atoms for the GDPR text and link

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.atoms.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.atoms.yml
@@ -67,3 +67,27 @@ atoms:
     weight: 3
     default:
       da: ''
+
+  footer-col4-text:
+    type: textfield
+    title: Nyhedsbrev GDPR tekst
+    description: ''
+    category: Page layout
+    group: Footer
+    subgroup: Column 4
+    weight: 6
+    default:
+      da: ''
+
+  footer-col4-link:
+    type: link
+    title: Nyhedsbrev GDPR link
+    description: ''
+    category: Page layout
+    group: Footer
+    subgroup: Column 4
+    weight: 7
+    options:
+      external: FALSE
+    default:
+      da: ''
