--- a/config/sync/field.field.block_content.news_overview.field_news_overview.yml
+++ b/config/sync/field.field.block_content.news_overview.field_news_overview.yml
@@ -19,8 +19,9 @@ default_value:
   -
     fields:
       owner: ''
-    count: 5
-    sort: newest
+      text: ''
+    count: 16
+    sort: popular
     pagination: false
     facets: {  }
 default_value_callback: ''
