--- a/config/sync/core.entity_form_display.block_content.articles.default.yml
+++ b/config/sync/core.entity_form_display.block_content.articles.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - block_content.type.articles
     - field.field.block_content.articles.field_articles
   module:
-    - premium_articles
+    - entity_overview
 _core:
   default_config_hash: 0ywkXYm0UiWv2vKm47Aj-HDkcH-nYWqxUhnFnA7cOCo
 id: block_content.articles.default
@@ -15,7 +15,7 @@ bundle: articles
 mode: default
 content:
   field_articles:
-    type: article_filter_widget
+    type: overview_filter_widget
     weight: 0
     region: content
     settings: {  }
