--- a/config/sync/core.entity_view_display.block_content.article_form.default.yml
+++ b/config/sync/core.entity_view_display.block_content.article_form.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - block_content.type.article_form
     - field.field.block_content.article_form.field_articles_form
   module:
-    - premium_articles
+    - entity_overview
 _core:
   default_config_hash: ypp4zCkiXqOw0DXOzjjfMXHDI31Nwa6770Z7IHAQbLc
 id: block_content.article_form.default
@@ -15,7 +15,7 @@ bundle: article_form
 mode: default
 content:
   field_articles_form:
-    type: article_filter_form
+    type: overview_filter_form
     label: hidden
     settings:
       view_mode: teaser
