--- a/config/sync/core.entity_view_display.block_content.articles.default.yml
+++ b/config/sync/core.entity_view_display.block_content.articles.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - block_content.type.articles
     - field.field.block_content.articles.field_articles
   module:
-    - premium_articles
+    - entity_overview
 _core:
   default_config_hash: tZ3JVzfqmWBMamsAcag6NwBEKe5Krv3qqtBljCWm_Gs
 id: block_content.articles.default
@@ -15,7 +15,7 @@ bundle: articles
 mode: default
 content:
   field_articles:
-    type: article_list
+    type: overview_list
     label: hidden
     settings:
       view_mode: teaser
