--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -44,6 +44,7 @@ module:
   entity: 0
   entity_clone: 0
   entity_overview: 0
+  entity_overview_search: 0
   entity_reference_revisions: 0
   entity_usage: 0
   field: 0
