--- a/config/sync/field.storage.block_content.field_articles_form.yml
+++ b/config/sync/field.storage.block_content.field_articles_form.yml
@@ -12,8 +12,8 @@ field_name: field_articles_form
 entity_type: block_content
 type: overview_filter
 settings:
-  entity_bundle: node.article
   allow_facets: 1
+  overview: node_article
 module: entity_overview
 locked: false
 cardinality: 1
