--- a/config/sync/field.storage.block_content.field_news_overview.yml
+++ b/config/sync/field.storage.block_content.field_news_overview.yml
@@ -10,8 +10,8 @@ field_name: field_news_overview
 entity_type: block_content
 type: overview_filter
 settings:
-  entity_bundle: node.news
   allow_facets: 0
+  overview: node_news
 module: entity_overview
 locked: false
 cardinality: 1
