--- a/config/sync/field.storage.profile.field_organization_overview.yml
+++ b/config/sync/field.storage.profile.field_organization_overview.yml
@@ -10,8 +10,8 @@ field_name: field_organization_overview
 entity_type: profile
 type: overview_filter
 settings:
-  entity_bundle: node.article
   allow_facets: 1
+  overview: node_article
 module: entity_overview
 locked: false
 cardinality: 1
