--- a/config/sync/field.storage.taxonomy_term.field_overview.yml
+++ b/config/sync/field.storage.taxonomy_term.field_overview.yml
@@ -12,8 +12,8 @@ field_name: field_overview
 entity_type: taxonomy_term
 type: overview_filter
 settings:
-  entity_bundle: node.article
   allow_facets: 1
+  overview: node_article
 module: entity_overview
 locked: false
 cardinality: 1
