--- a/config/sync/mailsystem.settings.yml
+++ b/config/sync/mailsystem.settings.yml
@@ -1,10 +1,10 @@
 _core:
   default_config_hash: IhwTepsVwtbtbcT5GzQKhCXDCRvbk3MNkWqPiuiZ10s
 langcode: da
-theme: current
+theme: sis
 defaults:
-  sender: swiftmailer
-  formatter: swiftmailer
+  sender: SMTPMailSystem
+  formatter: SMTPMailSystem
 modules:
   swiftmailer:
     none:
